deployments/terminal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: terminal
spec:
  selector:
    app: terminal
  ports:
    - protocol: TCP
      port: 7681
      targetPort: 7681
